--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span><a href="https://heykvr.github.io/kvr_portfolio.io/">Portfolio Website</a></span>
+   					<span><a href="https://heykvr.github.io/heykvr.github.io/">Portfolio Website</a></span>
    				</li>
                     <li>
                         <strong>Email:</strong>
